# ploomberg

./: .gitignore  CLAUDE.md  MANUAL.md  README.md  pyproject.toml
ploomberg/: __main__.py  app.py  config.py  import_cli.py  messages.py  paper_trading.py  stash.py  themes.py
ploomberg/providers/: __init__.py  base.py  coingecko.py  frankfurter.py  history.py  metals.py  yahoo.py
ploomberg/screens/: add_asset_screen.py  chart_view.py  converter_view.py  dashboard_view.py  editor_view.py  stash_view.py  theme_view.py  trading_view.py
ploomberg/widgets/: command_hints.py  converter_form.py  header_bar.py  price_chart.py  stash_table.py  status_bar.py  theme_preview.py  ticker_table.py  trading_panel.py
