[project]
name = "ploomberg"
version = "0.1.0"
description = "Bloomberg Terminal-inspired commodity & currency tracker"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.25.0",
    "yfinance>=0.2.0",
    "textual-plotext>=1.0.0",
]

[project.scripts]
ploomberg = "ploomberg.__main__:main"
ploomberg-import = "ploomberg.import_cli:main"
